Correct input box overflowing parent container

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
   background-color: #27100b;
@@ -9,7 +13,6 @@
   font-size: calc(10px + 2vmin);
   color: white;
   overflow-x: hidden;
-  box-sizing: border-box;
 }
 
 .navbar {
