--- a/client/src/components/LoginComponents/LoginOrSignup.css
+++ b/client/src/components/LoginComponents/LoginOrSignup.css
@@ -47,8 +47,9 @@
 
 .manualLoginHolder {
   display: flex;
-  width: 80%;
-  margin-left: 55px;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 .loginSeparator {
@@ -61,28 +62,27 @@
   font-size: 25px;
   margin-bottom: 2px;
   margin-top: 2px;
-  margin-left: 5px;
   text-align: left;
 }
 
 .manualEntryInput {
-  width: 205%;
-  margin-left: 10px;
+  width: 95%;
   margin-top: 2px;
-  padding: 15px;
+  padding: 10px;
   font-size: 20px;
   font-style: italic;
-  border: 4px black;
+  border: 2px solid black;
   background-color: lightgrey;
 }
 
 .manualEntryHolder {
-  margin-bottom: 10px;
+  width: 80%;
+  padding: 10px;
 }
 
 .submitBtn {
   font-weight: bold;
-  margin-top: 20px;
+  margin-top: 14px;
   margin-bottom: 20px;
   background-color: lightgreen;
   width: 40%;
